force-app/main/default/objects/DeliveryItem__c/DeliveryItem__c.object-meta.xml
<CustomObject>
    <label>배송서 상세</label>
    <nameField>
        <label>Delivery Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>