force-app/main/default/objects/DeliveryItem__c/fields/ExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDeliveryDate__c</fullName>
    <label>Expected Delivery Date</label>
    <type>DateTime</type>
</CustomField>