force-app/main/default/objects/DeliveryItem__c/fields/FulfillmentOrderProduct__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order Product</label>
    <referenceTo>FulfillmentOrderItem__c</referenceTo>
    <relationshipLabel>Delivery Item</relationshipLabel>
    <relationshipName>Delivery_Item</relationshipName>
    <type>Lookup</type>
</CustomField>