force-app/main/default/objects/DeliveryItem__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Delivery Item</relationshipLabel>
    <relationshipName>Delivery_Item</relationshipName>
    <type>Lookup</type>
</CustomField>