force-app/main/default/objects/DeliveryItem__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>GfAmsPurchaseOrder__c</referenceTo>
    <relationshipLabel>Delivery Item</relationshipLabel>
    <relationshipName>Delivery_Item</relationshipName>
    <type>Lookup</type>
</CustomField>