force-app/main/default/objects/DeliveryItem__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Delivery Item</relationshipLabel>
    <relationshipName>Delivery_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>