force-app/main/default/objects/DeliveryItem__c/fields/TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>TrackingNumber__c</fullName>
    <label>추적번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>