force-app/main/default/objects/DeliveryItem__c/fields/TrackingUrl__c.field-meta.xml
<CustomField>
    <fullName>TrackingUrl__c</fullName>
    <label>추적URL</label>
    <type>Url</type>
</CustomField>